# mujoco_uni

./: .gitignore  sync_mlx_patch.sh  sync_uni_patch.sh
.github/workflows/: build_steps.sh
cmake/: MujocoDependencies.cmake  MujocoLinkOptions.cmake
python/: DOMAIN_RANDOMIZED_ROLLOUT_EXECUTION_PLAN.md  MANIFEST.in  build_manylinux_2_28.sh  build_py313.sh  pyproject.toml  release.sh  release_mlx.sh  setup.py
python/mujoco/: CMakeLists.txt  __init__.py  batch_env.cc  batch_env.py  batch_env_benchmark.py  batch_env_parity_check.py  batch_env_test.py  batch_forward.py  batch_forward_bind.cc  bindings_test.py  domain_randomized_rollout.cc  domain_randomized_rollout.py  domain_randomized_rollout_benchmark.py  domain_randomized_rollout_test.py  dr_rollout.cc  dr_rollout.py  dr_rollout_benchmark.py  dr_rollout_test.py  mlx_step.py  mlx_step_bind.cc  rollout_mlx_bind.cc  structs.h  structs_wrappers.cc  test_batch_env_multimodel.py  threadpool.cc  threadpool.h
simulate/cmake/: MujocoLinkOptions.cmake
