[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-mlx"
version = "3.5.0.post6"
authors = [
    {name = "TATP-233"},
]
description = "MuJoCo Physics Simulator with MLX rollout support for macOS"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "absl-py",
    "etils[epath]",
    "glfw",
    "mlx; platform_system == 'Darwin'",
    "numpy",
    "pyopengl",
]
dynamic = ["readme", "scripts"]

[project.urls]
Homepage = "https://github.com/TATP-233/mujoco"
Documentation = "https://mujoco.readthedocs.io/en/3.5.0"
Repository = "https://github.com/TATP-233/mujoco"
Changelog = "https://mujoco.readthedocs.io/en/3.5.0/changelog.html"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mujoco*"]
exclude = [
    "mujoco.codegen",
    "mujoco.mjpython",
]

[tool.setuptools.package-data]
mujoco = [
    "libmujoco.*.dylib",
    "libmujoco*.so.*",
    "mujoco.dll",
    "include/mujoco/*.h",
    "testdata/*.xml",
    "testdata/*.msh",
    "testdata/*.usda",
    "testdata/*.zip",
    "testdata/*.urdf",
    "sysid/report/templates/*.html",
]

[project.optional-dependencies]
sysid = [
    "absl-py",
    "colorama",
    "imageio[ffmpeg]",
    "jinja2",
    "matplotlib",
    "plotly",
    "pyyaml",
    "scipy",
    "tabulate",
    "typing_extensions",
]
usd = [
    "usd-core",
    "pillow"
]

[tool.isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
line_length = 120
use_parentheses = true
multi_line_output = 3
skip_glob = ["**/*.ipynb"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = '''(
 .ipynb$
)'''
